--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
 <html>
 
-<title> First Website </title>
+<title> Aishwarya Saikumar </title>
 
 <body>
-<h1> This is my First github page </h1?
+  <h1> This is my First github page </h1>
 </body>
 
 <style>
+  
 body{
 background color:green;
 color:#fff;
 text-align:center;
 }
-
 </style>
+  
 </html>
